--- a/index.html
+++ b/index.html
@@ -9,13 +9,35 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  
+  <div class="conatiner">
+    <h1 class="heading">Pitsa buyurtma qilish</h1>
+    <form class="pizza-form" action="">
+      <section class="pizza-form__options">
+        <div class="pizza-form__group">
+          <label class="option-title bread-label" for="bread-input">Noni qanday bo'lsin?</label>
+          <select class="bread-input" name="bread-type" id="bread-input"></select>
+        </div>
 
+        <div class="pizza-form__group js-pizza-sizes">
+          <h2 class="option-title">Kattaligini tanlang!</h2>
+        </div>
+      </section>
 
+      <section class="pizza-form__result">
 
+      </section>
+    </form>
+  </div>
 
-
-
-  <script src="js/main.js"></script>
+  <template class="pizza-type-bread">
+    <option class="bread-option" value=""></option>
+  </template>
+  <template class="pizza-type-size">
+    <label class="size-checkbox">
+      <input class="size-checkbox__input visually-hidden" type="radio" name="pitsa o'lchami" value="">
+      <span class="size-checkbox__control"><small></small></span>
+    </label>
+  </template>
+<script src="js/main.js"></script>
 </body>
 </html>
