--- a/index.html
+++ b/index.html
@@ -13,18 +13,58 @@
     <h1 class="heading">Pitsa buyurtma qilish</h1>
     <form class="pizza-form" action="">
       <section class="pizza-form__options">
+        <!-- bread  type for pizza  -->
         <div class="pizza-form__group">
           <label class="option-title bread-label" for="bread-input">Noni qanday bo'lsin?</label>
           <select class="bread-input" name="bread-type" id="bread-input"></select>
         </div>
 
+        <!-- sizes of pizza  -->
         <div class="pizza-form__group js-pizza-sizes">
           <h2 class="option-title">Kattaligini tanlang!</h2>
+        </div>
+
+        <!-- inredients of pizza -->
+        <div class="pizza-form__group">
+          <h2 class="option-title">Ustiga nima solaylik!</h2>
+          <div class="checkbox-wrapper ingredients-wrapper  js-pizza-ingredients">
+          </div>
+        </div>
+
+        <!-- additional -->
+        <div class="pizza-form__group">
+          <h2 class="option-title">Ustiga nima solaylik!</h2>
+          <div class="checkbox-wrapper additional-wrapper  js-pizza-additional">
+          </div>
         </div>
       </section>
 
       <section class="pizza-form__result">
+        <output class="result">
+          <div class="result-bread">
+            <p class="result__title result-bread__heading">Non turi: <span class="result-bread__show"></span></p>
+          </div>
 
+          <div class="result-size">
+            <p class="result__title result-size__heading">Kattaligi: <span class="result-size__show"></span></p>
+          </div>
+
+          <div class="result-ingredient">
+            <p class="result__title result-ingredient__heading">
+              <ul class="result-list ingredient-list">
+                <li class="result-list__item"></li>
+              </ul>
+            </p>
+          </div>
+
+          <div class="result-additional">
+            <p class="result__title result-additional__heading">
+              <ul class="result-list additional-list">
+
+              </ul>
+          </p>
+          </div>
+        </output>
       </section>
     </form>
   </div>
@@ -32,11 +72,30 @@
   <template class="pizza-type-bread">
     <option class="bread-option" value=""></option>
   </template>
+
   <template class="pizza-type-size">
     <label class="size-checkbox">
       <input class="size-checkbox__input visually-hidden" type="radio" name="pitsa o'lchami" value="">
       <span class="size-checkbox__control"><small></small></span>
     </label>
+  </template>
+
+  <template class="pizza-type-inredient">
+    <div class="checkbox-group ingredient-group">
+      <label  class="checkbox-group__label pizza-ingredient">
+        <input type="checkbox" class="checkbox__input ingredient-input visually-hidden" name="pizza-ingredient" value="">
+        <span class="checkbox-group__controller ingredient-controller"></span>
+      </label>
+    </div>
+  </template>
+
+  <template class="pizza-type-additional">
+    <div class="checkbox-group additional-group">
+      <label  class="pizza-additional checkbox-group__label">
+        <input type="checkbox" class="checkbox-group__input additional-input visually-hidden" name="pizza-additional" value="">
+        <span class="checkbox-group__controller additional-controller"></span>
+      </label>
+    </div>
   </template>
 <script src="js/main.js"></script>
 </body>
